--- a/control/pysrc/testnb.ipynb
+++ b/control/pysrc/testnb.ipynb
@@ -25,22 +25,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'sdfa008jgh'\n"
+      "1000001052671\n"
      ]
     }
    ],
    "source": [
-    "ser.write(\"sdfa008jghgf\".encode(\"UTF-8\"))\n",
-    "print(ser.read(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ser.close()"
+    "a = 999999999999\n",
+    "a = a | 0x111111\n",
+    "print(a)"
    ]
   }
  ],
