fix(pysrc): fix serial open error

--- a/control/pysrc/testnb.ipynb
+++ b/control/pysrc/testnb.ipynb
@@ -4,36 +4,36 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import serial\n",
-    "\n",
-    "a = 10\n",
-    "\n",
-    "# try:\n",
-    "ser = serial.Serial(\"COM5\", 115200, 8, \"N\", 1, 0.1)\n",
-    "# print(ser)\n",
-    "# except:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000001052671\n"
+      " serial open error !\n"
      ]
     }
    ],
    "source": [
-    "a = 999999999999\n",
-    "a = a | 0x111111\n",
-    "print(a)"
+    "import zdt_motor\n",
+    "motor = zdt_motor.ZdtMotor(\"COM3\", 1,0.1)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "motor.pos_set(1000, 50, 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
